Implement fairness benchmark